...
                                android:layout_marginTop="15dp"
                                android:text="       From"
                                android:textColor="@color/white"
                                android:textSize="10sp" />

                            <EditText
                                android:id="@+id/editTextListingStartDate"
                                android:layout_width="67dp"
                                android:layout_height="46dp"
                                android:layout_margin="15dp"
                                android:background="@drawable/rounded_edit_text"
                                android:hint="@string/starting_date"
                                android:inputType="date"
...
                                android:layout_marginTop="15dp"
                                android:text="@string/from_time"
                                android:textColor="@color/white"
                                android:textSize="10sp" />

                            <EditText
                                android:id="@+id/editTextListingStartTime"
                                android:layout_width="86dp"
                                android:layout_height="41dp"
                                android:layout_margin="15dp"
                                android:background="@drawable/rounded_edit_text"
                                android:hint="@string/starting_time"
                                android:inputType="time"
...
                                android:layout_marginTop="15dp"
                                android:text="         To"
                                android:textColor="@color/white"
                                android:textSize="10sp" />

                            <EditText
                                android:id="@+id/editTextListingEndDate"
                                android:layout_width="match_parent"
                                android:layout_height="36dp"
                                android:layout_margin="15dp"
                                android:background="@drawable/rounded_edit_text"
                                android:hint="@string/ending_date"
                                android:inputType="date"
...
                                android:layout_marginTop="15dp"
                                android:text="@string/to_time"
                                android:textColor="@color/white"
                                android:textSize="10sp" />

                            <EditText
                                android:id="@+id/editTextListingEndTime"
                                android:layout_width="79dp"
                                android:layout_height="45dp"
                                android:layout_margin="15dp"
                                android:background="@drawable/rounded_edit_text"
                                android:hint="@string/ending_time"
                                android:inputType="time"
...
                                android:layout_marginTop="15dp"
                                android:text="     Location"
                                android:textColor="@color/white"
                                android:textSize="10sp" />

                            <EditText
                                android:id="@+id/editTextLocation"
                                android:layout_width="100dp"
                                android:layout_height="50dp"
                                android:layout_margin="15dp"
                                android:background="@drawable/rounded_edit_text"
                                android:hint="Enter Location"
                                android:inputType="text"
...

                        </TableRow>
                    </TableLayout>


                    <Button
                        android:id="@+id/viewAllBookings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:background="@android:color/transparent"
                        android:text="View All Available Properties"
                        android:textColor="@color/white" />


                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
...
